{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 13,
  "lineage": "c4b7bebf-50cb-7162-c7bd-96ecaa709260",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:207896869126:loadbalancer/web-elb",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "web-elb-1918365529.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-0e9fae59ffdc6ec2a"
            ],
            "source_security_group": "207896869126/elb_http",
            "source_security_group_id": "sg-0e9fae59ffdc6ec2a",
            "subnets": [
              "subnet-0282af94318104faa",
              "subnet-03a0b32193f4e6af9"
            ],
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.elb_http",
            "aws_subnet.public_us_east_2a",
            "aws_subnet.public_us_east_2b",
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207896869126:internet-gateway/igw-05b4808ee20a85800",
            "id": "igw-05b4808ee20a85800",
            "owner_id": "207896869126",
            "tags": {
              "Name": "My VPC - Internet Gateway"
            },
            "vpc_id": "vpc-0fd9ce266f75d2fd0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce7a4c943a3da22d",
            "owner_id": "207896869126",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b4808ee20a85800",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnets Route Table for My VPC"
            },
            "vpc_id": "vpc-0fd9ce266f75d2fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_2a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fa90067c41d0c7a",
            "route_table_id": "rtb-0ce7a4c943a3da22d",
            "subnet_id": "subnet-03a0b32193f4e6af9"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_us_east_2a",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_2b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd63a03854a6567f",
            "route_table_id": "rtb-0ce7a4c943a3da22d",
            "subnet_id": "subnet-0282af94318104faa"
          },
          "dependencies": [
            "aws_internet_gateway.my_vpc_igw",
            "aws_route_table.my_vpc_public",
            "aws_subnet.public_us_east_2b",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207896869126:security-group/sg-078876b2079d4e150",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078876b2079d4e150",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "207896869126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd9ce266f75d2fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207896869126:security-group/sg-0e9fae59ffdc6ec2a",
            "description": "Allow HTTP traffic to instances through Elastic Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9fae59ffdc6ec2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb_http",
            "name_prefix": "",
            "owner_id": "207896869126",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP through ELB Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd9ce266f75d2fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207896869126:subnet/subnet-03a0b32193f4e6af9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-03a0b32193f4e6af9",
            "map_public_ip_on_launch": false,
            "owner_id": "207896869126",
            "tags": {
              "Name": "Public Subnet us-east-2a"
            },
            "vpc_id": "vpc-0fd9ce266f75d2fd0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_us_east_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207896869126:subnet/subnet-0282af94318104faa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0282af94318104faa",
            "map_public_ip_on_launch": false,
            "owner_id": "207896869126",
            "tags": {
              "Name": "Public Subnet us-east-2b"
            },
            "vpc_id": "vpc-0fd9ce266f75d2fd0"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:207896869126:vpc/vpc-0fd9ce266f75d2fd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8f526dd718ba438",
            "default_route_table_id": "rtb-0fd6ff000229ecbff",
            "default_security_group_id": "sg-06a22ff15a3002ae1",
            "dhcp_options_id": "dopt-7abc3311",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fd9ce266f75d2fd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd6ff000229ecbff",
            "owner_id": "207896869126",
            "tags": {
              "Name": "My VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}